remove user avatar

--- a/client/app/scripts/superdesk-users/styles/users.less
+++ b/client/app/scripts/superdesk-users/styles/users.less
@@ -426,6 +426,12 @@
                 font-weight: 300;
             }
         }
+        .remove-avatar {
+			position: absolute;
+	    	margin-top: 19px;
+	    	right: 8px;
+	    	display: none;
+		}
 		.change-photo {
 			display: none;
 			background-color: rgba(55,152,180,0.6);
@@ -442,6 +448,9 @@
 			height:30px;
 		}
 		&:hover {
+			.remove-avatar {
+				display: block;
+			}
 			.change-photo {
 			display: block;
 			}
